--- a/packages/a-package/package.json
+++ b/packages/a-package/package.json
@@ -2,7 +2,7 @@
   "name": "a-package",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
