--- a/packages/a-package/package.json
+++ b/packages/a-package/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "a-package",
-  "version": "1.2.0",
+  "name": "a-package-zpf-test",
+  "version": "1.3.0",
   "description": "",
   "main": "dist",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "lerna clean"
   },
   "author": "",
   "license": "ISC",
