--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build-all": "lerna run build --stream --parallel",
     "change": "lerna changed --all",
+    "bootstrap": "lerna bootstrap",
     "clean": "lerna run clean --stream --parallel",
     "publish-all": "lerna publish"
   },
@@ -12,10 +13,5 @@
   },
   "workspaces": [
     "packages/*"
-  ],
-  "dependencies": {
-    "b-package-zpf-test": "^1.3.0",
-    "react-markdown-editor-lite": "^1.2.4",
-    "typescript": "^4.2.4"
-  }
+  ]
 }
