--- a/packages/a-package/package.json
+++ b/packages/a-package/package.json
@@ -2,15 +2,18 @@
   "name": "a-package-zpf-test",
   "version": "1.3.0",
   "description": "",
-  "main": "dist",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "clean": "lerna clean"
+    "clean": "lerna clean -y"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
     "typescript": "^4.2.4"
   }
 }
