--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "works/modules/*"
   ],
   "version": "independent",
   "npmClient": "yarn",
